# smart_threshold

./: .gitignore  CLAUDE.md  README.md  STREAMLIT_README.md  pyproject.toml  pytest.ini  run_backend.sh  run_frontend.sh  run_streamlit.sh  streamlit_advanced.py  test_param_optimization.py
backend/: __init__.py  redis_client.py
backend/app/: __init__.py  main.py  schemas.py
backend/app/routers/: __init__.py  algorithms.py  check.py  datasource.py  datasources.py  models.py  pipelines.py  predictions.py  thresholds.py
backend/db/: __init__.py  session.py
backend/models/: __init__.py  base.py  job.py  pipeline.py
backend/pipeline/: __init__.py  executor.py
backend/pipeline/steps/: __init__.py  clean.py  fetch.py  output.py  train.py  validate.py
backend/tasks/: __init__.py  celery_app.py  lifecycle.py  pipeline_tasks.py
config/: datasources.json  timescaledb.json
config/models/: model_configs.json
examples/: demo.py  model_showcase.py
frontend/: index.html
frontend/css/: components.css  grafana-theme.css  main.css
frontend/js/: api.js  app.js  config.js
frontend/js/components/: charts.js  dashboard.js  data-query.js  datasources.js  jobs.js  models.js  pipelines.js  predict.js  sidebar.js
frontend/js/utils/: helpers.js
scripts/: migrate_add_predict_periods.py  populate_data.py
smart_threshold/: __init__.py  cli.py
smart_threshold/algorithms/: __init__.py  base.py  holt_winters.py  moving_average.py  prophet_algo.py  registry.py  three_sigma.py
smart_threshold/config/: __init__.py  config_manager.py  default_config.yaml  model_config.py
smart_threshold/core/: __init__.py  backtest_optimizer.py  feature_analyzer.py  model_router.py  param_optimizer.py
smart_threshold/core/predictors/: __init__.py  base.py  factory.py  prophet_predictor.py  static_predictor.py  welford_predictor.py
smart_threshold/data/: generator.py
smart_threshold/datasource/: __init__.py  models.py  prometheus_client.py  timescaledb_client.py
smart_threshold/utils/: visualization.py
tests/: conftest.py  test_algorithms.py  test_datasource.py  test_factory.py  test_feature_analyzer.py  test_generator.py  test_model_router.py  test_models.py  test_pipeline_steps.py  test_predictors.py
