[project]
name = "smart-threshold"
version = "0.1.0"
description = "DB 监控算法自动选型系统 - 根据时序数据特征自动选择最合适的动态阈值算法"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "pandas>=2.0.0",
    "numpy>=1.24.0",
    "statsmodels>=0.14.0",
    "prophet>=1.1.4",
    "matplotlib>=3.7.0",
    "scipy>=1.10.0",
    "pyyaml>=6.0",
    "openpyxl>=3.1.0",
    "requests>=2.31.0",
    "rich>=14.0.0",
    # FastAPI backend
    "fastapi>=0.104.0",
    "uvicorn[standard]>=0.24.0",
    "pydantic>=2.0.0",
    "python-multipart>=0.0.6",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project.optional-dependencies]
dev = [
    "pytest>=7.4.0",
    "black>=23.0.0",
    "ruff>=0.1.0",
]
timescaledb = [
    "psycopg2-binary>=2.9.0",
]

[project.scripts]
smart-threshold = "smart_threshold.cli:main"
